# SpeechService

./: .gitignore  README.md  start.bat  start_new.bat  test2.bat  test_simple.bat
backend/: .env.example  pyproject.toml
backend/speech_service/: config.py  main.py  tts_engine.py
frontend/: index.html
